* New printout option: "?Category:Name" to ask for membership in that category.
* Re-enabled service links (e.g. use [[provides service::online maps]] on any page of
  a property to Type:Geographic coordinates).
* Re-enabled Type:Boolean.
* Prototype translation for Korean (still alpha).
* Various minor bugfixes.

== Semantic MediaWiki 1.0RC2 ==

* More liberal parsing for geographic coordinates, most user inputs accepted now.
* Improved URL datatype: better linking behaviour, tolerant towards Unicode-URLs.
* Significantly improved performance for RDF export.
* Complete translations for Fr, Zh-tw, and Zh-ch added.
* Various minor bugfixes.

== Semantic MediaWiki 1.0RC1 ==

* Simplified semantic annotations: just one kind of annotation ("Property").
* Significant speedup (both server and network load substantially reduced).
* Prettier and easier to understand interfaces:
  ** New tooltips that work on both normal and special pages.
  ** Simplified factbox layout, with all properties in alphabetic order.
  ** Inline warnings to simplify trouble shooting with annotations.
  ** Improved, more helpful and informative warning and error messages.
  ** Highlighting for built-in elements. E.g. built-in types are visually
     distinguished from arbitrary types; useful as visual feedback.
  ** Error/warning reporting for (inline) queries.
* Alias strings for all SMW elements. English labels are allowed in all
  languages, names of old SMW elements still work as aliases for their
  replacements.
* More expressivity for semantic querying:
  ** support for subproperties,
  ** improved equality resolution (redirects),
  ** support for disjunctions,
  ** inequality check for datavalues ("[[property::!value]]")
* New/improved datatypes:
  ** Type:Page for explicitly specifying properties that are "relations"
  ** Type:Number as universal replacement for Type:Integer and Type:Float
  ** Type:URL as universal replacement for old Type:URL and Type:URI